chore: 启动extension host + watch，问题不是debug模式，由于默认在同一个terminal中执行，命令执行顺序有限制

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "version": "0.0.1",
   "scripts": {
-    "vscode": "npm run -C packages/vscode watch"
+    "vscode": "npm run -C packages/vscode watch",
+    "dev-vscode": "code --extensionDevelopmentPath=${workspaceFolder}/packages/vscode && npm run -C packages/vscode watch"
   },
   "devDependencies": {
     "react-webview-extension": "workspace:*",
