chore: f5执行多个任务，通过dependsOn可以实现，但是会在同一个terminal中执行，如果是webpack --watch这种命令不行

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,8 +4,27 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "vscode",
 			"type": "npm",
 			"script": "vscode",
+			"problemMatcher": "$ts-webpack-watch",
+			"isBackground": true,
+			"presentation": {
+				"reveal": "never",
+				"group": "watchers"
+			},
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"dependsOn": [
+				"echo"
+			]
+		},
+		{
+			"label": "echo",
+			"type": "npm",
+			"script": "echo",
 			"problemMatcher": "$ts-webpack-watch",
 			"isBackground": true,
 			"presentation": {
