--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
 			"outFiles": [
 				"${workspaceFolder}/packages/vscode/dist/**/*.js"
 			],
-			"preLaunchTask": "npm: vscode"
+			"preLaunchTask": "vscode"
 		},
 		{
 			"name": "Extension Tests",
