--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,13 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "start",
+			"dependsOn": [
+				"vscode",
+				"echo"
+			]
+		},
+		{
 			"label": "vscode",
 			"type": "npm",
 			"script": "vscode",
@@ -17,9 +24,6 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"dependsOn": [
-				"echo"
-			]
 		},
 		{
 			"label": "echo",
